--- a/Cyborg Shrimp/Assembly-CSharp.csproj
+++ b/Cyborg Shrimp/Assembly-CSharp.csproj
@@ -58,7 +58,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\MoverScript.cs" />
+     <Compile Include="Assets\Scripts\CharacterMover.cs" />
+     <Compile Include="Assets\Scripts\Info.cs" />
+     <Compile Include="Assets\Scripts\PlayerHealth.cs" />
+     <Compile Include="Assets\Scripts\PlayerScore.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>S:/College/Fall 2020/class work/Scripting/GitKraken/1610_fall_2020/Cyborg Shrimp/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
