--- a/Create With Code/Prototype 2/Assembly-CSharp.csproj
+++ b/Create With Code/Prototype 2/Assembly-CSharp.csproj
@@ -58,7 +58,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scripts\DestroyOutOfBounds.cs" />
+     <Compile Include="Assets\Scripts\MoveForward.cs" />
      <Compile Include="Assets\Scripts\PlayerController.cs" />
+     <Compile Include="Assets\Scripts\spawnManager.cs" />
      <None Include="Assets\Course Library\_Source_Files\_LICENSE.txt" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>S:/College/Fall 2020/class work/Scripting/GitKraken/1610_fall_2020/Create With Code/Prototype 2/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
