--- a/Game 1/Assembly-CSharp.csproj
+++ b/Game 1/Assembly-CSharp.csproj
@@ -58,7 +58,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\PlayerMove.cs" />
+     <Compile Include="Assets\Scripts\Platformer.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>S:/College/Fall 2020/class work/Scripting/GitKraken/1610_fall_2020/Game 1/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
