more game stuff
nvm I have extra internet time for some reason don't know how long it'll la-

--- a/Game 1/Assembly-CSharp.csproj
+++ b/Game 1/Assembly-CSharp.csproj
@@ -58,8 +58,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\Scriptable Objects\FloatData.cs" />
      <Compile Include="Assets\Scriptable Objects\Game Actions\GameAction.cs" />
-     <Compile Include="Assets\Scriptable Objects\IntData.cs" />
      <Compile Include="Assets\Scripts\ActionResponse.cs" />
      <Compile Include="Assets\Scripts\CameraScript.cs" />
      <Compile Include="Assets\Scripts\Platformer.cs" />
