--- a/Game 1/Assembly-CSharp.csproj
+++ b/Game 1/Assembly-CSharp.csproj
@@ -66,6 +66,7 @@
      <Compile Include="Assets\Scripts\Platformer.cs" />
      <Compile Include="Assets\Scripts\Rainbow.cs" />
      <Compile Include="Assets\Scripts\TriggerEventsBehavior.cs" />
+     <Compile Include="Assets\Scripts\aiBehavior.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark01_UGUI.cs" />
      <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\Benchmark02.cs" />
